[package]
name = "tts-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.181"
serde_json = "1.0.104"
